--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,108 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root">
-      <h1>Hello world!</h1>
-    </div>
-    <script src="index.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Safer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+
+  <!--Encabezado de la página-->
+  <div class="container background-1">
+    <!--¿está bien que el header vaya dentro de un div o el header cumple están función por sí sola?-->
+    <header class="main-content">
+      <!--¿habría que poner cada elemento dentro de un div para manejarlo mejor?-->
+      <h1>safer</h1>
+      <img src="/images/chat2.png" alt="" id="img-header">
+      <h2>Lorem ipsum dolor sit amet.</h2>
+      <p id="txt-header">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae molestias, non nam
+        obcaecati ipsum cupiditate eveniet ducimus iusto est!
+      </p>
+      <div class="btn-place">
+        <!--¿es mejor un button o un elemento 'a' con borde, cuál es su diferencia en cuanto a funcionalidad?-->
+        <button class="btn-type"><a href="#sign-in">Iniciar sesión</a></button>
+        <button class="btn-type"> <a href="#sign-up">Registrate aquí</a></button>
+      </div>
+    </header>
+  </div>
+
+  <!--Formulario para iniciar sesión-->
+  <div class="container main-content background-2" id="sign-in">
+    <section>
+      <!--¿existe una jerarquía en el html semántico?-->
+      <main>
+        <h3>Inicio de sesión</h3>
+        <form action="" method="post">
+          <label for="userSignIn">Nombre usuaria</label>
+          <!--¿está bien si name y id tienen el mismo valor o deben ser distintos?-->
+          <input type="text" name="user" id="userSignIn">
+          <!--¿label e input deberían ir dentro de un div?-->
+          <label for="passwordSignIn">Contraseña</label>
+          <input type="password" name="password" id="passwordSignIn">
+          <button class="btn-type" type="submit" id="btnSignIn"><a href="#msn-cipher">Entrar</a>
+            </button>
+        </form>
+      </main>
+    </section>
+  </div>
+
+  <!--Formulario para ingresar texto para cifrar y descifrar-->
+  <!--¿también debe ser un formulario?-->
+  <div class="container main-content background-1" id="msn-cipher">
+    <h3>Servicio de mensaje cifrado</h3>
+    <form action="" method="post">
+      <label for="users"></label>
+      <select name="" id="users">
+        <option value="placeholder">Elige una amiga</option>
+        <option value="user1">María Carrasco</option>
+        <option value="user2">Lorena Hernández</option>
+        <option value="user3">Francisca Salas</option>
+        <option value="user4">Camila López</option>
+      </select>
+      <!--¿es necesario el label cuando se usa textarea o podría ser un elemento p o h?-->
+      <label for="msn-input">Escribe el mensaje que quieres cifrar</label>
+      <textarea name="" id="msn-input" cols="30" rows="10"></textarea>
+      <label for="num-cipher">Elige el desplazamiento de cifrado</label>
+      <input type="number" name="num-cipher" id="num-cipher">
+      <div class="btn-place">
+        <button type="submit" class="btn-type">Cifrar el mensaje</button>
+        <button type="submit" class="btn-type">Descifrar el mensaje</button>
+      </div>
+      <label for="msn-output">Tu mensaje es:</label>
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+    </form>
+  </div>
+
+  <!--Formulario para el registro de usuaria-->
+  <div class="container main-content background-2" id="sign-up">
+    <h3>Registro de usuaria</h3>
+    <form action="" method="post">
+      <label for="userSignUp">Ingresa tu nombre y apellido</label>
+      <input type="text" name="user" id="userSignUp">
+      <label for="passwordSignUp">Ingresa una contraseña</label>
+      <input type="password" name="password" id="passwordSignUp">
+      <label for="emailSignUp">Ingresa tu correo electrónico</label>
+      <input type="email" name="email" id="emailSignUp">
+      <button type="submit" class="btn-type"><a href="#sign-in">Registrarme</a></button>
+    </form>
+  </div>
+
+  <!--Pie de la página con los links a redes sociales-->
+  <div class="container background-1">
+    <footer>
+      <img src="" alt="">
+      <a href="http://">facebook</a>
+
+      <img src="" alt="">
+      <a href="http://">instagram</a>
+
+      <img src="" alt="">
+      <a href="http://">twitter</a>
+    </footer>
+  </div>
+  <script src="index.js" type="module"></script>
+</body>
+
 </html>
