rutas de imagenes arregladas

--- a/src/index.html
+++ b/src/index.html
@@ -12,27 +12,18 @@
   <header>
     <div class="wrap">
       <h1>safer</h1>
-      <h2>Lorem ipsum dolor sit amet.</h2>
-      <p id="txt-header">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae molestias, non nam
-        obcaecati ipsum cupiditate eveniet ducimus iusto est!
-      </p>
+      <h2>Una plataforma pensada por y para mujeres para cifrar y descifrar mensajes de manera segura y privada</h2>
       <img src="/images/90539.jpg">
     </div>
   </header>
 
   <!--Caja de ingreso de texto para cifrar y descifrar-->
   <main class="main-content">
-    <!--<aside class="content-grid">
-      <img src="/images/chat2.png" alt="" id="img-header">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat tempore a iusto id enim cum dolorem itaque!
-        Illum praesentium, facere dolorum sed, provident ullam odio reprehenderit cupiditate culpa, aut accusantium!</p>
-    </aside>-->
 
     <section class="content-grid">
       <h3>Servicio de mensajería cifrada</h3>
 
       <div>
-        <!--se podría cambiar por el teléfono o correo?-->
         <h4>Elige una amiga:</h4>
         <select name="" id="users">
           <option value="user1">María Carrasco</option>
@@ -63,8 +54,8 @@
       </div>
 
       <div>
-        <button class="btn-type" id="btnClear" onclick="clear()">Limpiar el mensaje</button>
-        <button class="btn-type" id="btnLink">Enviar el mensaje</button>
+        <button class="btn-type" id="btnClear" onclick="clear()">Limpiar mensaje</button>
+        <button class="btn-type" id="btnLink">Enviar mensaje</button>
       </div>
 
     </section>
@@ -73,14 +64,9 @@
   <!--Pie de página con los links a redes sociales-->
   <footer>
     <div class="wrap">
-      <img src="" alt="">
-      <a href="http://">facebook</a>
-
-      <img src="" alt="">
-      <a href="http://">instagram</a>
-
-      <img src="" alt="">
-      <a href="http://">twitter</a>
+      <img src="/images/facebook.png" alt="" class="logo">
+      <img src="/images/instagram.png" alt="" class="logo">
+      <img src="/images/twitter.png" alt="" class="logo">
     </div>
   </footer>
 
