--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="wrap">
       <h1>safer chat</h1>
-      <h2>Ya puedes codificar tus mensajes de manera segura y privada<br><span class="subtitle">Escribe todo lo que quieras, porque... ¡nadie más podrá entender lo que dicen!</span></h2>
+      <h2>Ya puedes codificar tus mensajes de manera segura y privada<br><span class="subtitle">Escribe todo lo que quieras, porque... ¡nadie más podrá entender lo que escribes!</span></h2>
       <img src="/images/90539.jpg">
     </div>
   </header>
@@ -23,21 +23,20 @@
 
 <!--Explicación funcionamiento del cipher-->
     <section>
-      <h4 class="titleMain">¿Cómo funciona?</h4>
-      <p class="textMain">Escribe el mensaje que quieres cifrar o descrifrar y luego envíalo a cualquiera de tus
-        contactos</p>
+      <h4 class="textMain">Escribe el mensaje que quieres cifrar o descrifrar y luego envíalo a cualquiera de tus
+        contactos</h4>
     </section>
 
 <!--Elección del destinatario y offset-->
     <section class="insertText">
-      <h5>Elige aplicación de mensajería:</h5>
+      <h5>Selecciona app de mensajería:</h5>
       <select name="" id="chat-email">
         <option value="1">Facebook</option>
         <option value="2">Instagram</option>
         <option value="3">Whatsapp</option>
         <option value="4">Gmail</option>
       </select>
-      <h5>Elige destinataria:</h5>
+      <h5>Selecciona destinataria:</h5>
       <select name="" id="user">
         <option value="1">María Carrasco</option>
         <option value="2">Lorena Pérez</option>
@@ -45,7 +44,7 @@
         <option value="4">Valentina Cáceres</option>
       </select>
       <h5>Ingresa desplazamiento de cifrado:</h5>
-      <input type="number" id="num-cipher" placeholder="Por ejemplo: 1, 2, 3,..">
+      <input type="number" id="num-cipher" placeholder="1, 2,..">
     </section>
 
 <!--Ingreso del mensaje para cifrar o descifrar-->
@@ -64,12 +63,10 @@
     </section>
   </main>
 
-<!--Pie de página con los links a redes sociales-->
+<!--Pie de página-->
   <footer>
     <div class="wrap">
-      <img src="/images/facebook.png" alt="" class="logo">
-      <img src="/images/instagram.png" alt="" class="logo">
-      <img src="/images/twitter.png" alt="" class="logo">
+      <p>Hecho con amor por Dani Aedo</p>
     </div>
   </footer>
   <script src="index.js" type="module"></script>
