estructura de la maqueta html

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
   <main class="main-content">
 
 <!--Explicación funcionamiento del cipher-->
-    <section>
-      <h4 class="textMain">Escribe el mensaje que quieres cifrar o descrifrar y luego envíalo a cualquiera de tus
+    <section class="textContent">
+      <h4 class="textMain">Escribe el mensaje que quieres cifrar o descrifrar y luego envíalo a tus
         contactos</h4>
     </section>
 
@@ -46,7 +46,6 @@
       <h5>Ingresa desplazamiento de cifrado:</h5>
       <input type="number" id="num-cipher" placeholder="1, 2,..">
     </section>
-
 <!--Ingreso del mensaje para cifrar o descifrar-->
     <section class="insertText">
       <h5>Ingresa tu mensaje:</h5>
@@ -59,6 +58,7 @@
     <section class="insertText">
       <h5>Tu mensaje es:</h5>
       <textarea id="msn-output" cols="30" rows="10" placeholder="Aquí podrás ver tu mensaje cifrado o descifrado"></textarea>
+      <button class="btn-type btn-place" id="btnClear">Limpiar mensaje</button>
       <button class="btn-type btn-place" id="btnLink">Enviar mensaje</button>
     </section>
   </main>
@@ -66,7 +66,7 @@
 <!--Pie de página-->
   <footer>
     <div class="wrap">
-      <p>Hecho con amor por Dani Aedo</p>
+      <p>---Hecho con ❤ por daedov---</p>
     </div>
   </footer>
   <script src="index.js" type="module"></script>
