--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrap">
       <h1>safer chat</h1>
       <h2>Ya puedes codificar tus mensajes de manera segura y privada<br><span class="subtitle">Escribe todo lo que quieras, porque... ¡nadie más podrá entender lo que escribes!</span></h2>
-      <img src="/images/90539.jpg">
+      <img src="./images/90539.jpg">
     </div>
   </header>
 
